ajout fonction mergeLut et du lut invert

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -O2 -Wno-unused-result -g
 LIB    = -lm
 OBJ    = main.o image.o LUT.o
 RM     = rm -f
-BIN    = cparti
+BIN    = minigimp
 DIRNAME = $(shell basename $$PWD)
 BACKUP  = $(shell date +`basename $$PWD`-%m.%d.%H.%M.zip)
 STDNAME = $(DIRNAME).zip
@@ -11,7 +11,7 @@ STDNAME = $(DIRNAME).zip
 all : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ) $(LIB) -o $(BIN)
 	@echo "--------------------------------------------------------------"
-	@echo "            to execute type: ./ $(BIN) "
+	@echo "            to execute type: ./$(BIN) "
 	@echo "--------------------------------------------------------------"
 
 image.o : image.c image.h LUT.h
@@ -24,7 +24,7 @@ main.o : main.c image.o image.h LUT.h
 	$(CC) $(CFLAGS) -c $<  
 	@echo "done..."
 
-LUT.o : LUT.c LUT.h
+LUT.o : LUT.c LUT.h 
 	@echo "compile LUT"
 	$(CC) $(CFLAGS) -c $<  
 	@echo "done..."
